fix: almost done logic behind game

--- a/memoryGame/src/app/card-list-item/card-list-item.component.css
+++ b/memoryGame/src/app/card-list-item/card-list-item.component.css
@@ -1,4 +1,5 @@
 
+  
   .card {
     width: 210px; 
     height: 290px;
@@ -13,9 +14,11 @@
     background-color: #7a8dc3;
   }
   
+  .card img {
+    max-width: 100%; /* Limit the image width to the card's width */
+    max-height: 100%; /* Limit the image height to the card's height */
+  }
 
-  
-  
   .card img.front-face {
     display: none; 
     width: 230px;
